# LoRa_Network_STM32

.svn/: wc.db
docs/: .~lock.anexo1.ods#  anexo1.ods
docs/TEX/: Makefile  abstract.aux  abstract.tex  ack.aux  biblio.bib  etsit.eps  resumen.aux  tfg.aux  tfg.bbl  tfg.blg  tfg.bst  tfg.dvi  tfg.fdb_latexmk  tfg.fls  tfg.lof  tfg.lot  tfg.out  tfg.tex  tfg.toc
docs/TEX/conclusiones/: conclusiones.tex
docs/TEX/hard/: hardware.tex
docs/TEX/soft/: software.tex
docs/TEX/soft/figs/: worksapce_diagram.drawio
docs/papers/: fuentes.txt
hardware/CARRIER_V1/: BME280.PcbLib  CAMtastic1.Cam  LoRaPCB.PcbLib  PCB1.PcbDoc  PCB1_ZONES.PcbDoc  PCB1_ZONES_1.PcbDoc  PcbLib1.PcbLib  Schlib1.SchLib  Sheet1.SchDoc  lora_carrier.OutJob  lora_carrier.PrjPcb  lora_carrier.SCHLIB  supply.SchDoc
hardware/CARRIER_V1/3D-files/: 38250.txt  ALSRobot-Fuse1210.step
hardware/CARRIER_V1/LIBS/650-MICROSMD005F-2-pcb-part-libraries/: 650-MICROSMD005F-2-pcb-part-libraries.epw
hardware/CARRIER_V1/Project Outputs for lora_carrier/: .~lock.lora_carrier.xlsx#  .~lock.lora_carrier_mod.xlsx#  PCB1_ZONES_1.DRR  PCB1_ZONES_1.EXTREP  PCB1_ZONES_1.GBP  PCB1_ZONES_1.GM1  PCB1_ZONES_1.GTL  PCB1_ZONES_1.GTO  PCB1_ZONES_1.GTS  PCB1_ZONES_1.TXT  lora_carrier_mod.ods  lora_carrier_mod.xlsx
hardware/CARRIER_V1/__Previews/: PCB1.PcbDocPreview  PCB1_ZONES.PcbDocPreview  Sheet1.SchDocPreview  supply.SchDocPreview
hardware/CARRIER_V1/rul/: PCB1_ZONES_1.RUL
hardware/MCU_BOARD_v1/: .~lock.lora_module.xlsx#  PCB1-macro.APR_LIB.txt  lora_module.Annotation.txt  lora_module.PrjPcb
hardware/MCU_BOARD_v1/3D-files/User Library-UFL-R-SMD/: User Library-UFL-R-SMD.STEP
hardware/MCU_BOARD_v1/Project Outputs for lora_module/: CAMtastic1.Cam  CAMtastic2.Cam  PCB1-Plated.TXT  PCB1.DRR  PCB1.EXTREP  PCB1.GM15  PCB1.GPB  PCB1.GPT  PCB1.GTL  PCB1.REP
hardware/MCU_BOARD_v1/__Previews/: mcu.SchDocPreview
hardware/MCU_BOARD_v1/export/: ora_module.OutJob
hardware/MCU_BOARD_v1/libs/Imported CMWX1ZZABZ-078.lia/: CMWX1ZZABZ-078.ERR  CMWX1ZZABZ-078.LibPkg  CMWX1ZZABZ-078.SchLib
hardware/MCU_BOARD_v1/libs/Imported CMWX1ZZABZ-078.lia/Project Outputs for CMWX1ZZABZ-078/: CMWX1ZZABZ-078.IntLib
hardware/MCU_BOARD_v1/libs/Imported CMWX1ZZABZ-078.lia/__Previews/: CMWX1ZZABZ-078.ERRPreview
software/Project/: CMakeLists.txt  README.md  STM32L072CB_FLASH.ld
software/Project/Core/BOARDS/B-L072Z-LRWAN1/inc/: stm32l0xx_hal_conf.h
software/Project/Core/BOARDS/B-L072Z-LRWAN1/src/: mlm32l0xx_hw.c  mlm32l0xx_it.c
software/Project/Core/BOARDS/STM32L4xx_Nucleo/inc/: stm32l4xx_hal_conf.h  stm32l4xx_hw_conf.h
software/Project/Core/BOARDS/STM32L4xx_Nucleo/src/: stm32l4xx_hw.c  stm32l4xx_it.c
software/Project/Core/Inc/: LowPower.h  hw_conf.h  main.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h  types.h  vcom.h
software/Project/Core/Src/: hw_rtc.c  main_2.c  mlm32l0xx_it.c  stm32l0xx_hw_conf.h  types.h
software/Project/Debug/: Lora_stm32l0xx.elf  Lora_stm32l0xx.hex  Lora_stm32l0xx.list
software/Project/Debug/Core/Src/: debug.su  hw_gpio.su  hw_spi.su  main_2.su  mlm32l0xx_hal_msp.su  mlm32l0xx_hw.su  stm32l0xx_hal_msp.su  stm32l0xx_hw.su  vcom.su
software/Project/Debug/Drivers/BSP/B-L072Z-LRWAN1/: b-l072z-lrwan1.su
software/Project/Debug/Drivers/STM32L0xx_HAL_Driver/Src/: stm32l0xx_hal_adc.su  stm32l0xx_hal_adc_ex.su  stm32l0xx_hal_dma.su  stm32l0xx_hal_flash_ex.su  stm32l0xx_hal_i2c_ex.su  stm32l0xx_hal_rcc.su  stm32l0xx_hal_rcc_ex.su  (+2 more)
software/Project/Master/: CMakeLists.txt  README.md  global  masterWS.code-workspace
software/Project/Master/Inc/: FreeRTOSConfig.h  main.h  system_config.h  types.h
software/Project/Master/Src/: main.c
software/Project/Node/: CMakeLists.txt  STM32ToolChain.cmake  nodeWP.code-workspace
software/Project/Node/Inc/: main.h  system_config.h  types.h
software/Project/Node/Src/: main.c
software/Project/global/other/: main_2.c
software/Project/test2/: CMakeLists.txt_b  core  nodeWP.code-workspace
software/Project/test2/Inc/: main.h  system_config.h  types.h
software/Project/test2/Src/: main.c
web/database/: nodes.eps  nodes.sql
web/database/db/: dbtest.py  query.py  tsensor.py
web/html/: about.php  config.php  contact.php  footer.php  header.php  index.php  main.php
web/html/js/: dataloader.js
web/html/php/: dataChart.php  query.php
(+631 files in other folders)
